add high scores and get rules endpoints
Add the option to set rules in the client side.
